{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 153,
  "lineage": "92e55b6e-7a4a-d740-a91b-517c5b1f27d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-096473d04a9e17cb4",
            "domain": "vpc",
            "id": "eipalloc-074c2fa2d96d1e8af",
            "network_border_group": "us-east-2",
            "network_interface": "eni-075c6b0c5b83d65d2",
            "private_dns": "ip-10-1-0-152.us-east-2.compute.internal",
            "private_ip": "10.1.0.152",
            "public_dns": "ec2-18-118-239-168.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.239.168",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:790007525022:instance/i-06f13f23ab1cc11c8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f13f23ab1cc11c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "petclinicn-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a7b4e24a950b2762",
            "private_dns": "ip-10-1-3-77.us-east-2.compute.internal",
            "private_ip": "10.1.3.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b71529b8ebdf0459",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-040408502b3136c31",
              "sg-0eb0d90445fe62bab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f2df6151d820d1f",
            "tags": {
              "Name": "dev-api"
            },
            "tags_all": {
              "Name": "dev-api"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040408502b3136c31",
              "sg-0eb0d90445fe62bab"
            ]
          },
          "dependencies": [
            "aws_key_pair.petclinicn",
            "aws_security_group.api-security-group",
            "aws_security_group.bastion-security-roup",
            "aws_subnet.dev-private-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:790007525022:instance/i-06a923dae695859e5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a923dae695859e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "petclinicn-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0156012ea7d8af64f",
            "private_dns": "ip-10-1-3-231.us-east-2.compute.internal",
            "private_ip": "10.1.3.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09dd16f7c3cd43bba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-040408502b3136c31",
              "sg-057fe85b068edf176"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f2df6151d820d1f",
            "tags": {
              "Name": "dev-app"
            },
            "tags_all": {
              "Name": "dev-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040408502b3136c31",
              "sg-057fe85b068edf176"
            ]
          },
          "dependencies": [
            "aws_key_pair.petclinicn",
            "aws_security_group.app-security-group",
            "aws_security_group.bastion-security-roup",
            "aws_subnet.dev-private-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:790007525022:instance/i-0df22d5f9d523ba70",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df22d5f9d523ba70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "petclinicn-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e4d7f8767f982218",
            "private_dns": "ip-10-1-0-53.us-east-2.compute.internal",
            "private_ip": "10.1.0.53",
            "public_dns": "ec2-13-58-16-1.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.16.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01fe544880a024390",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-040408502b3136c31"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9f18223e1ef46f5",
            "tags": {
              "Name": "dev-bastion"
            },
            "tags_all": {
              "Name": "dev-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040408502b3136c31"
            ]
          },
          "dependencies": [
            "aws_key_pair.petclinicn",
            "aws_security_group.bastion-security-roup",
            "aws_subnet.dev-public-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:790007525022:instance/i-056a0ad964082eb51",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056a0ad964082eb51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "petclinicn-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03e8e9ca6b7326f2b",
            "private_dns": "ip-10-1-3-18.us-east-2.compute.internal",
            "private_ip": "10.1.3.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03cc80c04d324f6f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-040408502b3136c31",
              "sg-09c41da81b22068e6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f2df6151d820d1f",
            "tags": {
              "Name": "dev-jenkins"
            },
            "tags_all": {
              "Name": "dev-jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040408502b3136c31",
              "sg-09c41da81b22068e6"
            ]
          },
          "dependencies": [
            "aws_key_pair.petclinicn",
            "aws_security_group.bastion-security-roup",
            "aws_security_group.jenkins-security-group",
            "aws_subnet.dev-private-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elk-itps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00399ec92321828f5",
            "arn": "arn:aws:ec2:us-east-2:790007525022:instance/i-09e0990f72cda7b85",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e0990f72cda7b85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "key_name": "petclinicn-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09c4a196494daa1a9",
            "private_dns": "ip-10-1-0-85.us-east-2.compute.internal",
            "private_ip": "10.1.0.85",
            "public_dns": "ec2-18-191-68-101.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.68.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021a507d29b69fb3a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-039e28c26e19a40a3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9f18223e1ef46f5",
            "tags": {
              "Name": "elk"
            },
            "tags_all": {
              "Name": "elk"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-039e28c26e19a40a3"
            ]
          },
          "dependencies": [
            "aws_key_pair.petclinicn",
            "aws_security_group.elk-security-group",
            "aws_subnet.dev-public-subnet-1a",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grafana-itps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00399ec92321828f5",
            "arn": "arn:aws:ec2:us-east-2:790007525022:instance/i-009493ab1c8d6b3d0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009493ab1c8d6b3d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "key_name": "petclinicn-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074b81efac95e9270",
            "private_dns": "ip-10-1-0-206.us-east-2.compute.internal",
            "private_ip": "10.1.0.206",
            "public_dns": "ec2-3-15-2-103.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.2.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f883c0a1f49ca7f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00b41ec300efffef8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9f18223e1ef46f5",
            "tags": {
              "Name": "grafana"
            },
            "tags_all": {
              "Name": "grafana"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00b41ec300efffef8"
            ]
          },
          "dependencies": [
            "aws_key_pair.petclinicn",
            "aws_security_group.grafana-security-group",
            "aws_subnet.dev-public-subnet-1a",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:internet-gateway/igw-06d7f1d9639010471",
            "id": "igw-06d7f1d9639010471",
            "owner_id": "790007525022",
            "tags": {
              "Name": "dev IGW"
            },
            "tags_all": {
              "Name": "dev IGW"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:loadbalancer/app/api-alb-lb-tf/bd00a8ebc5df0894",
            "arn_suffix": "app/api-alb-lb-tf/bd00a8ebc5df0894",
            "dns_name": "api-alb-lb-tf-150009013.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:loadbalancer/app/api-alb-lb-tf/bd00a8ebc5df0894",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "api-alb-lb-tf",
            "security_groups": [
              "sg-0a2ed5331e98681f0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03c7cc628e4128bf8"
              },
              {
                "subnet_id": "subnet-07f2df6151d820d1f"
              },
              {
                "subnet_id": "subnet-0a847cec7f227a9ba"
              }
            ],
            "subnets": [
              "subnet-03c7cc628e4128bf8",
              "subnet-07f2df6151d820d1f",
              "subnet-0a847cec7f227a9ba"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-06e277e357cef995e",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_subnet.dev-private-subnet-1a",
            "aws_subnet.dev-private-subnet-1b",
            "aws_subnet.dev-private-subnet-1c",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:loadbalancer/app/app-alb-lb-tf/cf5e1dd807157aef",
            "arn_suffix": "app/app-alb-lb-tf/cf5e1dd807157aef",
            "dns_name": "app-alb-lb-tf-1953931290.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:loadbalancer/app/app-alb-lb-tf/cf5e1dd807157aef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb-lb-tf",
            "security_groups": [
              "sg-0a2ed5331e98681f0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-053f8ac0ef376c45b"
              },
              {
                "subnet_id": "subnet-08a3e7553abbc2566"
              },
              {
                "subnet_id": "subnet-0a9f18223e1ef46f5"
              }
            ],
            "subnets": [
              "subnet-053f8ac0ef376c45b",
              "subnet-08a3e7553abbc2566",
              "subnet-0a9f18223e1ef46f5"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-06e277e357cef995e",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_subnet.dev-public-subnet-1b",
            "aws_subnet.dev-public-subnet-1c",
            "aws_vpc.dev-vpc",
            "aws_security_group.alb-security-group",
            "aws_subnet.dev-public-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jenkins-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:loadbalancer/app/jenkins-alb-lb-tf/33d153cf0f7bd165",
            "arn_suffix": "app/jenkins-alb-lb-tf/33d153cf0f7bd165",
            "dns_name": "jenkins-alb-lb-tf-895019680.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:loadbalancer/app/jenkins-alb-lb-tf/33d153cf0f7bd165",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-alb-lb-tf",
            "security_groups": [
              "sg-0a2ed5331e98681f0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-053f8ac0ef376c45b"
              },
              {
                "subnet_id": "subnet-08a3e7553abbc2566"
              },
              {
                "subnet_id": "subnet-0a9f18223e1ef46f5"
              }
            ],
            "subnets": [
              "subnet-053f8ac0ef376c45b",
              "subnet-08a3e7553abbc2566",
              "subnet-0a9f18223e1ef46f5"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-06e277e357cef995e",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_subnet.dev-public-subnet-1a",
            "aws_subnet.dev-public-subnet-1b",
            "aws_subnet.dev-public-subnet-1c",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rn_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:listener/app/app-alb-lb-tf/cf5e1dd807157aef/f4f3cd2896d15040",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/app-alb-lb-tg/33ee066f9575bd73",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:listener/app/app-alb-lb-tf/cf5e1dd807157aef/f4f3cd2896d15040",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:loadbalancer/app/app-alb-lb-tf/cf5e1dd807157aef",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.app-alb",
            "aws_security_group.alb-security-group",
            "aws_subnet.dev-public-subnet-1a",
            "aws_subnet.dev-public-subnet-1b",
            "aws_subnet.dev-public-subnet-1c",
            "aws_vpc.dev-vpc",
            "aws_lb.app-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rna_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:listener/app/api-alb-lb-tf/bd00a8ebc5df0894/c4410b804cbbce82",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/api-alb-lb-tg/b9d40d1e6286b28f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:listener/app/api-alb-lb-tf/bd00a8ebc5df0894/c4410b804cbbce82",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:loadbalancer/app/api-alb-lb-tf/bd00a8ebc5df0894",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "aws_lb.api-alb",
            "aws_lb_target_group.api-alb",
            "aws_security_group.alb-security-group",
            "aws_subnet.dev-private-subnet-1a",
            "aws_subnet.dev-private-subnet-1b",
            "aws_subnet.dev-private-subnet-1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rnrr_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:listener/app/jenkins-alb-lb-tf/33d153cf0f7bd165/b496761360dc440f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/jenkins-alb-lb-tg/52ba84342dae8fd2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:listener/app/jenkins-alb-lb-tf/33d153cf0f7bd165/b496761360dc440f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:loadbalancer/app/jenkins-alb-lb-tf/33d153cf0f7bd165",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_subnet.dev-public-subnet-1a",
            "aws_subnet.dev-public-subnet-1b",
            "aws_subnet.dev-public-subnet-1c",
            "aws_vpc.dev-vpc",
            "aws_lb.jenkins-alb",
            "aws_lb_target_group.jenkins-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/api-alb-lb-tg/b9d40d1e6286b28f",
            "arn_suffix": "targetgroup/api-alb-lb-tg/b9d40d1e6286b28f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/api-alb-lb-tg/b9d40d1e6286b28f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "api-alb-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/app-alb-lb-tg/33ee066f9575bd73",
            "arn_suffix": "targetgroup/app-alb-lb-tg/33ee066f9575bd73",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/app-alb-lb-tg/33ee066f9575bd73",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-alb-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/jenkins-alb-lb-tg/52ba84342dae8fd2",
            "arn_suffix": "targetgroup/jenkins-alb-lb-tg/52ba84342dae8fd2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/jenkins-alb-lb-tg/52ba84342dae8fd2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jenkins-alb-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "api-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/api-alb-lb-tg/b9d40d1e6286b28f-20210817055211863800000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/api-alb-lb-tg/b9d40d1e6286b28f",
            "target_id": "i-06a923dae695859e5"
          },
          "dependencies": [
            "aws_instance.dev-app",
            "aws_key_pair.petclinicn",
            "aws_lb_target_group.api-alb",
            "aws_security_group.app-security-group",
            "aws_security_group.bastion-security-roup",
            "aws_subnet.dev-private-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/app-alb-lb-tg/33ee066f9575bd73-20210817055211808300000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/app-alb-lb-tg/33ee066f9575bd73",
            "target_id": "i-06a923dae695859e5"
          },
          "dependencies": [
            "aws_instance.dev-app",
            "aws_key_pair.petclinicn",
            "aws_lb_target_group.app-alb",
            "aws_security_group.app-security-group",
            "aws_security_group.bastion-security-roup",
            "aws_subnet.dev-private-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/jenkins-alb-lb-tg/52ba84342dae8fd2-20210817055238706900000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:790007525022:targetgroup/jenkins-alb-lb-tg/52ba84342dae8fd2",
            "target_id": "i-056a0ad964082eb51"
          },
          "dependencies": [
            "aws_instance.dev-jenkins",
            "aws_key_pair.petclinicn",
            "aws_lb_target_group.jenkins-alb",
            "aws_security_group.bastion-security-roup",
            "aws_security_group.jenkins-security-group",
            "aws_subnet.dev-private-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074c2fa2d96d1e8af",
            "connectivity_type": "public",
            "id": "nat-013657c59d273a916",
            "network_interface_id": "eni-075c6b0c5b83d65d2",
            "private_ip": "10.1.0.152",
            "public_ip": "18.118.239.168",
            "subnet_id": "subnet-0a9f18223e1ef46f5",
            "tags": {
              "Name": "dev-natgw"
            },
            "tags_all": {
              "Name": "dev-natgw"
            }
          },
          "dependencies": [
            "aws_eip.dev-eip",
            "aws_subnet.dev-public-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:route-table/rtb-00a0a0e11af8594bc",
            "id": "rtb-00a0a0e11af8594bc",
            "owner_id": "790007525022",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-013657c59d273a916",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-route"
            },
            "tags_all": {
              "Name": "dev-private-route"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev-eip",
            "aws_nat_gateway.dev-natgw",
            "aws_subnet.dev-public-subnet-1a",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:route-table/rtb-03972aad7871f8042",
            "id": "rtb-03972aad7871f8042",
            "owner_id": "790007525022",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d7f1d9639010471",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-route"
            },
            "tags_all": {
              "Name": "dev-public-route"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-data-subnet-1a-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061a9bfe161ca3054",
            "route_table_id": "rtb-00a0a0e11af8594bc",
            "subnet_id": "subnet-085cc63bc83c305ae"
          },
          "dependencies": [
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-private-route",
            "aws_subnet.dev-data-subnet-1a",
            "aws_subnet.dev-public-subnet-1a",
            "aws_vpc.dev-vpc",
            "aws_eip.dev-eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-data-subnet-1b-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bc078ca4b423cc2",
            "route_table_id": "rtb-00a0a0e11af8594bc",
            "subnet_id": "subnet-0c05337f852da8e67"
          },
          "dependencies": [
            "aws_subnet.dev-data-subnet-1b",
            "aws_subnet.dev-public-subnet-1a",
            "aws_vpc.dev-vpc",
            "aws_eip.dev-eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-private-route"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-data-subnet-1c-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0588203e972aa4750",
            "route_table_id": "rtb-00a0a0e11af8594bc",
            "subnet_id": "subnet-03f02d4686f0c25c1"
          },
          "dependencies": [
            "aws_route_table.dev-private-route",
            "aws_subnet.dev-data-subnet-1c",
            "aws_subnet.dev-public-subnet-1a",
            "aws_vpc.dev-vpc",
            "aws_eip.dev-eip",
            "aws_nat_gateway.dev-natgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-private-subnet-1a-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0519cb68bc937b66f",
            "route_table_id": "rtb-00a0a0e11af8594bc",
            "subnet_id": "subnet-07f2df6151d820d1f"
          },
          "dependencies": [
            "aws_eip.dev-eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-private-route",
            "aws_subnet.dev-private-subnet-1a",
            "aws_subnet.dev-public-subnet-1a",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-private-subnet-1b-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b96c4af1ce74beaa",
            "route_table_id": "rtb-00a0a0e11af8594bc",
            "subnet_id": "subnet-03c7cc628e4128bf8"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "aws_eip.dev-eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-private-route",
            "aws_subnet.dev-private-subnet-1b",
            "aws_subnet.dev-public-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-private-subnet-1c-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c39164e1b7f31710",
            "route_table_id": "rtb-00a0a0e11af8594bc",
            "subnet_id": "subnet-0a847cec7f227a9ba"
          },
          "dependencies": [
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-private-route",
            "aws_subnet.dev-private-subnet-1c",
            "aws_subnet.dev-public-subnet-1a",
            "aws_vpc.dev-vpc",
            "aws_eip.dev-eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-public-subnet-1a-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08277609f9045ced8",
            "route_table_id": "rtb-03972aad7871f8042",
            "subnet_id": "subnet-0a9f18223e1ef46f5"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.dev-public-route",
            "aws_subnet.dev-public-subnet-1a",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-public-subnet-1b-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04132f130e37ac407",
            "route_table_id": "rtb-03972aad7871f8042",
            "subnet_id": "subnet-08a3e7553abbc2566"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.dev-public-route",
            "aws_subnet.dev-public-subnet-1b",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-public-subnet-1c-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01db5101076f724ab",
            "route_table_id": "rtb-03972aad7871f8042",
            "subnet_id": "subnet-053f8ac0ef376c45b"
          },
          "dependencies": [
            "aws_route_table.dev-public-route",
            "aws_subnet.dev-public-subnet-1c",
            "aws_vpc.dev-vpc",
            "aws_internet_gateway.internet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:security-group/sg-0a2ed5331e98681f0",
            "description": "Enable Http/Https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2ed5331e98681f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "790007525022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB Security Group"
            },
            "tags_all": {
              "Name": "ALB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:security-group/sg-0eb0d90445fe62bab",
            "description": "Enable Http/Https access on port 80/443 vis ALB and ssh access on 22 port vis Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb0d90445fe62bab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2ed5331e98681f0"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040408502b3136c31"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "api Security Group",
            "name_prefix": "",
            "owner_id": "790007525022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api Security Group"
            },
            "tags_all": {
              "Name": "api Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.bastion-security-roup",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:security-group/sg-057fe85b068edf176",
            "description": "Enable Http/Https access on port 80/443 vis ALB and ssh access on 22 port vis Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057fe85b068edf176",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2ed5331e98681f0"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040408502b3136c31"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app Security Group",
            "name_prefix": "",
            "owner_id": "790007525022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app Security Group"
            },
            "tags_all": {
              "Name": "app Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.bastion-security-roup",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-security-roup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:security-group/sg-040408502b3136c31",
            "description": "Enable SSh access on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040408502b3136c31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "bastion from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion Security Group",
            "name_prefix": "",
            "owner_id": "790007525022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion Security Group"
            },
            "tags_all": {
              "Name": "Bastion Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:security-group/sg-039e28c26e19a40a3",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039e28c26e19a40a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elk-security-group",
            "name_prefix": "",
            "owner_id": "790007525022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elk Security Group"
            },
            "tags_all": {
              "Name": "elk Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:security-group/sg-00b41ec300efffef8",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b41ec300efffef8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "grafana-security-group",
            "name_prefix": "",
            "owner_id": "790007525022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grafana Security Group"
            },
            "tags_all": {
              "Name": "grafana Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:security-group/sg-09c41da81b22068e6",
            "description": "Enable Http/Https access on port 80/443 vis ALB and ssh access on 22 port vis Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c41da81b22068e6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2ed5331e98681f0"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040408502b3136c31"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Jenkins Security Group",
            "name_prefix": "",
            "owner_id": "790007525022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins Security Group"
            },
            "tags_all": {
              "Name": "Jenkins Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.bastion-security-roup",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:security-group/sg-06852a03b1bdcde92",
            "description": "Enable MySQL on port 3306 via Jenkins and worker node on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06852a03b1bdcde92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL Access ",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09c41da81b22068e6"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL Access to Worker Node",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040408502b3136c31"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDS Security Group",
            "name_prefix": "",
            "owner_id": "790007525022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group"
            },
            "tags_all": {
              "Name": "RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.bastion-security-roup",
            "aws_security_group.jenkins-security-group",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-data-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:subnet/subnet-085cc63bc83c305ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-085cc63bc83c305ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790007525022",
            "tags": {
              "Name": "dev-data-subnet-1a"
            },
            "tags_all": {
              "Name": "dev-data-subnet-1a"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-data-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:subnet/subnet-0c05337f852da8e67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.7.0/24",
            "id": "subnet-0c05337f852da8e67",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790007525022",
            "tags": {
              "Name": "dev-data-subnet-1b"
            },
            "tags_all": {
              "Name": "dev-data-subnet-1b"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-data-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:subnet/subnet-03f02d4686f0c25c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.8.0/24",
            "id": "subnet-03f02d4686f0c25c1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790007525022",
            "tags": {
              "Name": "dev-data-subnet-1c"
            },
            "tags_all": {
              "Name": "dev-data-subnet-1c"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:subnet/subnet-07f2df6151d820d1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-07f2df6151d820d1f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790007525022",
            "tags": {
              "Name": "dev-private-subnet-1a"
            },
            "tags_all": {
              "Name": "dev-private-subnet-1a"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:subnet/subnet-03c7cc628e4128bf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-03c7cc628e4128bf8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790007525022",
            "tags": {
              "Name": "dev-private-subnet-1b"
            },
            "tags_all": {
              "Name": "dev-private-subnet-1b"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:subnet/subnet-0a847cec7f227a9ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-0a847cec7f227a9ba",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790007525022",
            "tags": {
              "Name": "dev-private-subnet-1c"
            },
            "tags_all": {
              "Name": "dev-private-subnet-1c"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:subnet/subnet-0a9f18223e1ef46f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0a9f18223e1ef46f5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "790007525022",
            "tags": {
              "Name": "dev-public-subnet-1a"
            },
            "tags_all": {
              "Name": "dev-public-subnet-1a"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:subnet/subnet-08a3e7553abbc2566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-08a3e7553abbc2566",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "790007525022",
            "tags": {
              "Name": "dev-public-subnet-1b"
            },
            "tags_all": {
              "Name": "dev-public-subnet-1b"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:subnet/subnet-053f8ac0ef376c45b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-053f8ac0ef376c45b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "790007525022",
            "tags": {
              "Name": "public-subnet-1c"
            },
            "tags_all": {
              "Name": "public-subnet-1c"
            },
            "vpc_id": "vpc-06e277e357cef995e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:790007525022:vpc/vpc-06e277e357cef995e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e3cd871197958327",
            "default_route_table_id": "rtb-02e0faa2fa0ffdfdb",
            "default_security_group_id": "sg-0d1661bba60effd8a",
            "dhcp_options_id": "dopt-ec245687",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06e277e357cef995e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02e0faa2fa0ffdfdb",
            "owner_id": "790007525022",
            "tags": {
              "Name": "dev VPC"
            },
            "tags_all": {
              "Name": "dev VPC"
            }
          }
        }
      ]
    }
  ]
}